--- a/style.css
+++ b/style.css
@@ -170,3 +170,10 @@ input[type='color']::-webkit-color-swatch {
 }
 
 /* Iteration 3: Style the coloring buttons */
+#color-container input {
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
+    border: solid 1px rgba(228, 228, 228, 0.3);
+    margin-bottom: 4px;
+  }
